--- a/companies/abcellera.html
+++ b/companies/abcellera.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>AbCellera Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Abcellera for Techbio, Antibodies, AI and Machine Learning">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -90,10 +96,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   AbCellera doesn't have a pipeline of its own. They have over 164 antibodies in 
-                                   development with over 38 partners.
+                                   I have only been following AbCellera for a short time. I haven't had much time to listen to their 
+                                   management to find out how good of a job they are doing. It will take some time for me to know how 
+                                   good of a CEO Carl Hansen will be. I do think he gets credit for the develop programs they had during 
+                                   Covid. 
                               </p>
                          </section> 
                          
