--- a/companies/beam.html
+++ b/companies/beam.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Beam Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Beam Therapeutics in CRISPR base editing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -94,26 +100,13 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   BEAM-101 SCD<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   Escape SCD<progress class="progress-bar" value="15" max="100"></progress>
-                                   IND Enabling Studies
-                              </p>
-                              <p class="profiles">
-                                   BEAM-201 T cell ALL<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   BEAM-301 GSD1a<progress class="progress-bar" value="5" max="100"></progress>
-                                   IND Enabling Studies
-                              </p>
-                              <p class="profiles">
-                                   BEAM-302 AATD<progress class="progress-bar" value="5" max="100"></progress>
-                                   IND Enabling Studies
+                                   I have followed Beam and John Evans for nearly 3 years now. I got into this company right after the IPO 
+                                   and have followed it for years. I think he has done an outstanding job so far developing the 
+                                   partnerships for the technology. He has managed the finances well with plenty of cash on the balance 
+                                   sheet. They are just starting clinical development. It will take some time to know how well they 
+                                   navigate the clinical process and regulatory environment. 
                               </p>
                          </section> 
                          
@@ -141,7 +134,7 @@
                               </p>
                               <p class="profiles">
                                    BEAM-302 is a gene editing product targeting the E342K mutation of AATD. This is a single base mutation. They have a 
-                                   therapy that attempts to base editing that single base mutation back into the wild type. The mouse models shows 
+                                   therapy that attempts to base editing that single base mutation back into the wild type. The mouse models show 
                                    modest return of normal A1AT protein. There is a by-stander edit in this therapy resulting in a variant of D341G.
                                    The data suggests this variant functions normally. They plan to file and IND in early 2024.
                               </p>
@@ -175,11 +168,11 @@
                                    AATD is about 100,000 patients in the US. It is estimated that 90% of them are PiZZ genotype.
                                    This could be a huge indication like SCD where they could do upward of $5 billion sales 
                                    if they can manufacture enough doses per year.
-                                   I would give it a .1 multiplier since its still preclinic. That would make it worth $500 million value.
+                                   I would give it a .1 multiplier since it's still preclinic. That would make it worth $500 million value.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $2.15 billion market cap. Based on the 70 millon shares outstanding
-                                   on the 10Q, that comes to $30.71. 
+                                   All in, that is a $2.15 billion market cap. Based on the 70 million shares outstanding, that comes to 
+                                   $30.71.
                               </p>
                          </section>  
 
@@ -205,7 +198,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Data Readouts</h2>
                               <p class="profiles">
-                              No Cinical Data Yet.
+                              No Clinical Data Yet.
                               </p>
                          </section> 
                     </div>
