--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Blueprint Medicines Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Blueprint Medicines in Kinase Therapies">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -84,62 +90,47 @@
                                    be commercial in 2023 for Indolent SM. Elenestinib should expand this franchise into more Mast Cells applications.
                                    Their second franchise is around Lung Cancer targeting EGFR with 3 drugs in development. They have BLU-945, BLU-525 and BLU-451
                                    all targeting different variants of EGFR exon 19, 20 and 21. They just started a third franchise around Breast 
-                                   Cancer with a CDK2 inhbitor. All of these are large areas of oncology.
+                                   Cancer with a CDK2 inhibitor. All of these are large areas of oncology.
                                    Their main focus has been on kinases that drive cell growth
                                    in cancer. They use mostly small molecule inhibitors, but recently started looking at protein degraders.
                               </p>
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   Ayvakit SM<progress class="progress-bar" value="90" max="100"></progress>
-                                   Awaiting FDA approval mid 2023
-                              </p>
-                              <p class="profiles">
-                                   Elenestinib SM<progress class="progress-bar" value="30" max="100"></progress>
-                                   Phase 2
-                              </p>
-                              <p class="profiles">
-                                   BLU-945 EGFR<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   BLU-525 EGFR<progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enalbing Studies
-                              </p>
-                              <p class="profiles">
-                                   BLU-451 EGFR<progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
+                                   Kate Haviland only took over last year as CEO, but she had been the COO under the management of Jeff Albers. Together, 
+                                   they have developed a winning commercial biotech company. I think she is doing a good job and moving the 
+                                   pipeline forward and bringing more drugs to commercial use.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   Ayvakit is a PDGFRa/KIT inhibtor which is already commercial for D842V GIST and D816V Advanced SM. This is a fully 
+                                   Ayvakit is a PDGFRa/KIT inhibitor which is already commercial for D842V GIST and D816V Advanced SM. This is a fully 
                                    mature market for them with 75% of patients on Ayvakit. They will expand this drug if they get indolent SM approval. There has been very 
                                    strong data to support use of Ayvakit in both Advanced and Indolent SM. 
                               </p>
                               <p class="profiles">
                                    Elenestinib is a pure KIT D816V inhibitor which is designed to be a pure target of Mast cell
-                                   disorders. They had good safety data in the phase 1 which showed similar side effects to placebo. They 
+                                   disorders. They had good safety data in phase 1 which showed similar side effects to placebo. They 
                                    should be presenting the Phase 1 data in indolent SM in 2H of 2023
                               </p>
                               <p class="profiles">
                                    BLU-945 is an EGFR inhibitor which targets the L858R mutation of Exon 21 and the Exon 19 deletion. 
                                    This is the most common mutation of EGFR with 41% of patients being Exon 19 deletion and 32% being L858R Exon
-                                   21 mutations. This drug targets the T790M and C797S mutations caused by Osimertinib. Its currently in 
+                                   21 mutations. This drug targets the T790M and C797S mutations caused by Osimertinib. It's currently in 
                                    phase 1.
                               </p>
                               <p class="profiles">
-                                   BLU-451 is their Exon 20 insertion EGFR drug they went out and bought last years. Exon 20 
+                                   BLU-451 is their Exon 20 insertion EGFR drug they went out and bought last year. Exon 20 
                                    insertions account for about 12% of EGFR mutations. We haven't seen any data from this program yet, but 
                                    we should see it this year. 
                               </p>
                               <p class="profiles">
-                                   BLU-525 is their second L858 drug focused on Exon 21 mutations and Exon 19 deletions. This drug target the 
-                                   C797X mutations. It is designed to be more balance at hitting both variants than BLU-945. This is in IND enabling 
+                                   BLU-525 is their second L858 drug focused on Exon 21 mutations and Exon 19 deletions. This drug targets the 
+                                   C797X mutations. It is designed to be more balanced at hitting both variants than BLU-945. This is in IND enabling 
                                    studies and should be ready for and IND this year.
                               </p>
                          </section>  
@@ -156,27 +147,27 @@
                                    them even 5x sales on their $200 million sales, this comes to $1 billion worth of value.
                               </p>
                               <p class="profiles">
-                                   Elenestinib could expand the applications into Mast Cell disoders to include Advanced and Indolent SM along
-                                   with other Mast Cell disoders. This could epxand the population to another 10,000 patients. Even at a $75,000 price, 
-                                   it would be worth another $750 million sales for them in Mast Cells. I would only give this a 1x multiplier for 
-                                   being in phase 1. That makes it worth $750 milion value.
+                                   Elenestinib could expand the applications into Mast Cell disorders to include Advanced and Indolent SM along 
+                                   with other Mast Cell disorders. This could expand the population to another 10,000 patients. Even at 
+                                   a $75,000 price, it would be worth another $750 million sales for them in Mast Cells. I would only give 
+                                   this a 1x multiplier for being in phase 1. That makes it worth $750 million value.
                               </p>
                               <p class="profiles">
                                    BLU-945 affects the most common forms of resistance to Osimertinib which does upward of $5 billion a year in sales.
                                    That makes the potential of this drug very big. The whole EGFR space is large with upward of 30% of Lung Cancer 
-                                   patients having and EGFR mutation. I think this could do upward of $1 billion sales if the data is strong. I would 
+                                   patients having an EGFR mutation. I think this could do upward of $1 billion sales if the data is strong. I would 
                                    give it a .1 multiplier since its still needs data. That makes it a value of $100 million.
                               </p>
                               <p class="profiles">
                                    BLU-451 affects the exon 20 insertions which is 12% of EGFR. That would be about 7,000 EGFR patients 
-                                   with this mutation in Lung Cancer. Even at $250,000 price, that could be worth about $500 million or more.
-                                   I would give it a .1 multiplier until we see the data. That makes it worth $50 million value.
+                                   with this mutation in Lung Cancer. Even at a $250,000 price, that could be worth about $500 million or more.
+                                   I would give it a .1 multiplier until we see the data. That makes it worth $50 million.
                               </p>
                               <p class="profiles">
                                    BLU-525 affects the Exon 21 L858R mutation and Exon 19 deletions. It is focused on the C797X 
                                    mutation. I am not sure yet how this asset distinguishes itself from BLU-945, but we should find 
                                    out as the data comes out. I think it could offer some additional treatment options. I would only 
-                                   give this about $250 million in sales until I see how they are developing this. With a .1 muliplier, 
+                                   give this about $250 million in sales until I see how they are developing this. With a .1 multiplier, 
                                    that comes to $25 million value.
                               </p>
                               <p class="profiles">
