--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Caribou Biosciences Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Caribou biosciences in CRISPR cell therapies">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -88,42 +94,31 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   CB-010 CD19 <progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1 Ongoing
-                              </p>
-                              <p class="profiles">
-                                   CB-011 BCMA <progress class="progress-bar" value="10" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   CB-012 CLL1 <progress class="progress-bar" value="10" max="100"></progress>
-                                   Preclinic
-                              </p>
-                              <p class="profiles">
-                                   CB-020 ROR1 <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
+                                   I have been following Rachel Haurwitz since it has gone public. I think she has done a good job with managing the 
+                                   company so far. They have some good data in allogeneic CAR-T which shows they are doing good on the 
+                                   science front. It will take time to know if they manage the balance sheet and clinical trials well.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   CB-010 is their CD19 CAR-T therapy where they use allogeneic T cell from donors. They edit these cells 
+                                   CB-010 is their CD19 CAR-T therapy where they use allogeneic T cells from donors. They edit these cells 
                                    to knock out the PD-1 receptor. This protects these cells from the tumor microenvironment by preventing T cell 
                                    exhaustion. The early data was very impressive for an allogeneic program with 100% complete response rates. The 
                                    only issue was the durability still fell off at 6 months like other allogeneic programs. The effects of PD-1 knockout 
                                    improved efficacy, but not durability which is the key issue in allogeneic programs.
                               </p>
                               <p class="profiles">
-                                   CB-011 is their BCMA CAR-T therapy where they knocout the MHC I and replace it with HLA-E. This is designed to 
+                                   CB-011 is their BCMA CAR-T therapy where they knockout the MHC I and replace it with HLA-E. This is designed to 
                                    prevent cell from being rejected by the host immune system. We know that HLA-E helps prevent NK cell reject, but not 
-                                   completely. We will have to see how much benefit this edit really gives to druability. They are calling their 
+                                   completely. We will have to see how much benefit this edit really gives to durability. They are calling their 
                                    version of immune evasion Camouflage. 
                               </p>
                               <p class="profiles">
-                                   CB-012 is their CLL1 CAR-T therapy where they knocout the MHC I and replace it with HLA-E, and they 
+                                   CB-012 is their CLL1 CAR-T therapy where they knockout the MHC I and replace it with HLA-E, and they 
                                    knock out PD-1. This program has both edits of the prior therapies. This is designed to 
                                    prevent cell from being rejected by the host immune system and avoid T cell exhaustion. We know that
                                    HLA-E helps prevent NK cell reject. We will have to see how much benefit these edits have combined. This will 
@@ -146,18 +141,18 @@
                               <p class="profiles">
                                    CB-010 is a CD19 program for lymphomas. That is about 75,000 patients in the US. So far this is 
                                    the best in class allogeneic program. I think it could earn about $500 million in sales unless the data 
-                                   signifcantly improves. They have some early phase 1 data so I would give it .5 multiple. That is $250 million 
+                                   significantly improves. They have some early phase 1 data so I would give it .5 multiple. That is $250 million 
                                    in value.
                               </p>
                               <p class="profiles">
-                                   CB-011 is a BCMA program for Multiple Myeloma. That is about 30,000 patient in the US. There is no data to inform 
+                                   CB-011 is a BCMA program for Multiple Myeloma. That is about 30,000 patients in the US. There is no data to inform 
                                    us to what level of market share it can have. I would guess at least $500 million if the data is good. This gets 
-                                   a .1 multiple for no data yet. That is worth $50 million value.
+                                   a .1 multiple for no data yet. That is worth $50 million.
                               </p>
                               <p class="profiles">
-                                   CB-012 is a CLL1 program for AML. That is about 20,000 patient in the US. There is no data to inform 
+                                   CB-012 is a CLL1 program for AML. That is about 20,000 patients in the US. There is no data to inform 
                                    us to what level of market share it can have. I would guess at least $250 million if the data is good. This gets 
-                                   a .1 multiple for no data yet. That is worth $25 million value.
+                                   a .1 multiple for no data yet. That is worth $25 million.
                               </p>
                               <p class="profiles">
                                    All in, that is a $668 million market cap. Based on the 61 million shares outstanding, that comes to $10.95.
