--- a/companies/exscientia.html
+++ b/companies/exscientia.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Exscientia Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Exscientia in TechBio, AI and Machine Learning">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -91,22 +97,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   EXALT 1 <progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   EXS-21546 - A2A <progress class="progress-bar" value="20" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   GTAEXS-617 - CDK7 <progress class="progress-bar" value="10" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   NLRP3 <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinic
+                                   I haven’t been following this company all that long. I got interested in them right after 
+                                   the IPO. So far I have had time to listen to Andrew Hopkins present. I think he is doing a good job so 
+                                   far. They have developed some good partnerships. They are now moving into the clinic and we will see 
+                                   how well they do with the clinical development of the pipeline. 
                               </p>
                          </section> 
                          
@@ -143,7 +139,7 @@
                               </p>
                               <p class="profiles">
                                    EXALT 1:
-                                   Since this is a diagnotic and therapy tool and not a drug, I find it hard to predict how much this would 
+                                   Since this is a diagnostic and therapy tool and not a drug, I find it hard to predict how much this would 
                                    really earn. I do think it could do $100 million or more, but not really sure. I would give it $100 million 
                                    worth of value.
                               </p>
